Our Provider page looks better on mobile and fixed image on Contact Us

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -281,6 +281,14 @@
   max-height: 600px;
 }
 
+#ourProvidersImage {
+
+}
+
+#ourProvidersShortBio {
+
+}
+
 #ourProvidersBottomSection {
   display: flex;
   flex-flow: row wrap;
@@ -318,12 +326,9 @@
 }
 
 #ourProvidersName {
+  display: block;
   color: #AF3120;
   padding-bottom: 10px;
-}
-
-#ourProvidersNames {
-  display: block;
 }
 
 #ourProvidersIhapSection {
@@ -1072,8 +1077,112 @@
 /* -------------------------------------------------------------------------- */
 
 /* _____________________________ Our Providers _____________________________ */
+#ourProvidersMainContainer {
+  max-width: 426px;
+  margin: auto;
+}
 
+#ourProvidersTitle {
+  font-weight: bold;
+  padding-top: 5px;
+}
 
+#ourProvidersFullSection {
+  display: flex;
+  flex-flow: wrap;
+}
+
+#ourProvidersProfile {
+  display: flex;
+  flex-flow: row wrap;
+  column-count: 2;
+  padding: 10px 5px 0 5px;
+  max-height: 700px;
+  max-width: 50%;
+}
+
+#ourProvidersImage {
+
+}
+
+#ourProvidersShortBio {
+  font-size: 14px;
+}
+
+#ourProvidersBottomSection {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+#ourProvidersEdu {
+  display: flex;
+  flex-direction: column;
+  max-width: 260px;
+}
+
+#ourProvidersBio {
+  margin-bottom: 7px;
+}
+
+#ourProvidersInterests {
+  display: flex;
+  flex-direction: column;
+  max-width: 240px;
+}
+
+#ourProvidersInt {
+  margin-bottom: 7px;
+}
+
+#ourProvidersInfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#ourProvidersPic {
+  height: 300px;
+  width: auto;
+}
+
+#ourProvidersName {
+    display: block;
+  color: #AF3120;
+  padding-bottom: 5px;
+  font-size: 17px;
+}
+
+#ourProvidersIhapSection {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 10px;
+  column-count: 3;
+}
+
+#ourProvidersIhap {
+  padding: 10px 0 0 10px;
+  height: 50px;
+  width: 220px;
+  border: solid .5px;
+  height: 100%;
+}
+
+#ourProvidersState {
+  font-size: 19px;
+}
+
+#ourProvidersTopWhiteSpace {
+  height: 55px;
+}
+
+#ourProvidersHalfWhiteSpace {
+  height: 40px;
+}
+
+#ourProvidersWhiteSpace {
+  height: 80px;
+}
 /* -------------------------------------------------------------------------- */
 
 /* ______________________________ Our Services ______________________________ */
@@ -1113,7 +1222,10 @@
   padding: 5px 0 0 10px;
 }
 
-.servicesSubTitle {
+.servicesS#ourProvidersImage {
+
+}
+ubTitle {
   margin-top: 9px;
   padding-left: 20px;
   font-size: 20px;
@@ -1240,7 +1352,7 @@
 
 #contactUsFemaleImage {
   width: 200px;
-  height: auto;
+  height: 156px;
   padding: 0px 0 0 0px;
 }
 
